--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- font awesome -->
       <link rel="stylesheet" href="css/font-awesome.min.css">
 
+      <!-- google fonts -->
+      <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
